--- a/example/ReduxRouter/package.json
+++ b/example/ReduxRouter/package.json
@@ -8,8 +8,8 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react-native": "^0.16.0",
-    "react-native-router-redux": "file:../..",
+    "react-native": "^0.21",
+    "react-native-router-redux": "^0.2.2",
     "react-redux": "^3.1.0",
     "redux": "^3.0.4"
   }
